--- a/PHSach/PHSach.csproj
+++ b/PHSach/PHSach.csproj
@@ -249,6 +249,7 @@
     <Content Include="css\owl.carousel.css" />
     <Content Include="css\style.css" />
     <Content Include="css\swipebox.css" />
+    <Content Include="database\DBPhatHanhSach.sql" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
